...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" name="TextColor"/>
                                            <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" name="TextColor"/>
                                            <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wZd-fU-hhb">
                                        <rect key="frame" x="20" y="61" width="263" height="34"/>
                                        <color key="backgroundColor" name="BackgroundColor"/>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RTy-R9-seG">
                                        <rect key="frame" x="20" y="105" width="263" height="34"/>
                                        <color key="backgroundColor" name="BackgroundColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDa-DK-8GR">
                                <rect key="frame" x="163" y="278" width="49" height="30"/>
                                <state key="normal" title="Submit"/>
                                <connections>
                                    <action selector="pickGroups:" destination="qhu-81-tAR" eventType="touchUpInside" id="hMB-EO-yXt"/>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bVS-XM-VZ8">
                                <rect key="frame" x="87.5" y="125.5" width="200" height="34"/>
                                <constraints>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dTY-Q8-Si8">
                                <rect key="frame" x="87.5" y="169.5" width="200" height="34"/>
                                <constraints>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A2S-OE-owB">
                                <rect key="frame" x="87.5" y="301.5" width="200" height="34"/>
                                <constraints>
...
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Activation Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TbJ-H8-AIK">
                                <rect key="frame" x="87.5" y="345.5" width="200" height="34"/>
                                <constraints>
...
                                        <color key="onTintColor" red="0.59999999999999998" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </switch>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="I have read and agree to the SaintsXCTF EULA" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="04p-EQ-jAH">
                                        <rect key="frame" x="75" y="0.0" width="150" height="30"/>
                                        <constraints>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OYo-1P-2ao">
                                        <rect key="frame" x="100" y="0.0" width="100" height="30"/>
                                        <state key="normal" title="Cancel">
                                            <color key="titleColor" red="0.88235294119999996" green="0.34509803919999998" blue="0.16078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Sign Out" image="rectangle.portrait.and.arrow.forward" catalog="system" id="9wg-KD-D3W"/>
                    <connections>
                        <outlet property="signOutSwitch" destination="5dm-F0-Tya" id="oKu-J9-A5s"/>
...
                                </subviews>
                                <color key="backgroundColor" name="BackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="monthlyCalendar">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <rect key="frame" x="16" y="120" width="343" height="45"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Groups" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5So-iW-Z84">
                                        <rect key="frame" x="57" y="5" width="56" height="35"/>
