...
        let longpress = UILongPressGestureRecognizer(target: self, action: #selector(MainViewController.handleLogLongPress))
        logTableView.addGestureRecognizer(longpress)
        
        // Set the refresh control for the table view for pull down refresh
        logTableView.refreshControl = refreshcontrol
        
        logTableView.accessibilityIdentifier = "LogTableView"
        
        refreshcontrol.addTarget(self, action: #selector(reloadLogs(_:)), for: .valueChanged)
        refreshcontrol.attributedTitle = NSAttributedString(string: "Reloading Logs ...", attributes: [:])
        
        // Get the currently logge@objc d in user
        user = SignedInUser.user
...
