...
        eulaSwitch.setOn(false, animated: false)
        eulaSwitch.addTarget(self, action: #selector(switchChanged), for: UIControl.Event.valueChanged)
        eulaSwitch.onTintColor = UIColor(0x990000)
        
        // The EULA needs to provide a link to the license agreement.  The EULA is hosted on termsfeed.com.
        let eulaText: String = eulaTextView.text ?? ""
        let eulaLinkRegex: String = "SaintsXCTF EULA"
        let matches: StringMatches = Utils.matchesInfo(for: eulaLinkRegex, in: eulaText)
        
        let eulaAttributedText = NSMutableAttributedString(string: eulaText, attributes: [:])
        let start = matches.startIndices[0]
        let length = matches.stringLengths[0]
        eulaAttributedText.addAttribute(NSAttributedString.Key.link,
...
